# AI_Ticketing_System

./: main.py  prompts.md  pyproject.toml  readme.md  requirements.txt  training.ipynb  vector_db.py
.ipynb_checkpoints/: training-checkpoint.ipynb
src/: __init__.py
src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/: __init__.py  main.py
src/app/api/: __init__.py  auto_resolution.py  classification.py  conversation.py  resolution_time.py  similarity.py
src/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  middleware.py
src/app/schemas/: __init__.py  ticket.py
src/app/services/: __init__.py  mappers.py  stubs.py
src/cdc/: __init__.py
src/ci-cd/: __init__.py
src/data_lake/: __init__.py
src/data_lake/athena_queries/: __init__.py
src/data_lake/glue_jobs/: __init__.py
src/domain/: __init__.py
src/domain/models/: __init__.py  conversation.py  results.py  ticket.py
src/domain/repositories/: __init__.py
src/domain/services/: __init__.py  interfaces.py
src/domain/value_objects/: __init__.py  ticket_category.py  ticket_priority.py
src/feature_store/: __init__.py
src/feature_store/definitions/: __init__.py
src/feature_store/ingestion/: __init__.py
src/ml/: __init__.py
src/ml/evaluation/: __init__.py
src/ml/feature_engineering/: __init__.py
src/ml/monitoring/: __init__.py
src/ml/pipelines/: __init__.py
src/ml/preprocessing/: __init__.py
src/ml/training/: __init__.py
src/observability/: __init__.py
src/rag/: __init__.py
src/security/: __init__.py
src/tests/: __init__.py
(+1 files in other folders)
