[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "fastapi>=0.129.0",
    "fastmcp>=2.14.5",
    "langchain>=1.2.10",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.8",
    "qdrant-client>=1.16.2",
]
[tool.setuptools]
packages = ["src"]
